Project

General

Profile

Actions

Bug #53651

closed

seastore crash due to out-dated onode destruction

Added by Xuehan Xu over 2 years ago. Updated almost 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

DEBUG 2021-12-16 11:53:45,163 [shard 0] seastore - BtreeLBAManager::get_mapping(0x502fec0): 18375179060904955274
DEBUG 2021-12-16 11:53:45,163 [shard 0] seastore - Cache::get_root(0x502fec0): root already on transaction CachedExtent(addr=0x522ca40, type=ROOT, version=10, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 1814528>), paddr=paddr_t<NULL_PADDR>, length=0, state=DIRTY, last_committed_crc=0, refcount=14)
DEBUG 2021-12-16 11:53:45,163 [shard 0] seastore - LBATree::lookup(0x50abe10): got root, depth 2
DEBUG 2021-12-16 11:53:45,163 [shard 0] seastore - LBATree::lookup_depth_range(0x50abe10): 1 > 0
DEBUG 2021-12-16 11:53:45,163 [shard 0] seastore - LBATree::get_leaf_node(0x50abe10): reading leaf at offset paddr_t<[0,3], 26198016>, begin 18375091696136744960, end 18375099204593074176
DEBUG 2021-12-16 11:53:45,163 [shard 0] seastore - Cache::get_extent(0x50abe10): Found extent at offset paddr_t<[0,3], 26198016> on transaction: CachedExtent(addr=0x5ae9ea0, type=LADDR_LEAF, version=11, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 28512256>), paddr=paddr_t<[0,3], 26198016>, length=4096, state=MUTATION_PENDING, last_committed_crc=2315914794, refcount=3, size=105, meta=btree_node_meta_t(begin=18375091696136744960, end=18375099204593074176, depth=1))
DEBUG 2021-12-16 11:53:45,163 [shard 0] seastore - TransactionManager::pin_to_extent(0x52f66a0): got extent CachedExtent(addr=0x56beef0, type=ONODE_BLOCK_STAGED, version=1433, dirty_from_or_retired_at=journal_seq_t(segment_seq=2, offset=paddr_t<[0,2], 4096>), paddr=paddr_t<[0,1], 12288>, length=16384, state=DIRTY, last_committed_crc=4163262743, refcount=3, laddr=0, pin=LBAPin(0~16384
>paddr_t<[0,1], 12288>, fltree_header=headerL0(is_level_tail=0, level=0))
DEBUG 2021-12-16 11:53:45,163 [shard 0] seastore - LBATree::get_internal_node(0x502fec0): reading internal at offset paddr_t<[0,3], 1822720>, depth 2, begin 0, end 18446744073709551615
DEBUG 2021-12-16 11:53:45,163 [shard 0] seastore - Cache::get_extent(0x502fec0): Found extent at offset paddr_t<[0,3], 1822720> on transaction: CachedExtent(addr=0x5ba1010, type=LADDR_INTERNAL, version=46, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 2957312>), paddr=paddr_t<[0,3], 1822720>, length=4096, state=DIRTY, last_committed_crc=3738435765, refcount=10, size=43, meta=btree_node_meta_t(begin=0, end=18446744073709551615, depth=2))
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - Cache::get_extent(0x51122f0): Read extent at offset paddr_t<[0,3], 35229696> in cache: CachedExtent(addr=0x500dc10, type=LADDR_LEAF, version=4, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 36093952>), paddr=paddr_t<[0,3], 35229696>, length=4096, state=DIRTY, last_committed_crc=4012888701, refcount=3, size=84, meta=btree_node_meta_t(begin=18375214245275111772, end=18375218651971416064, depth=1))
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - LBATree::get_leaf_node(0x51122f0): read leaf at offset paddr_t<[0,3], 35229696> CachedExtent(addr=0x500dc10, type=LADDR_LEAF, version=4, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 36093952>), paddr=paddr_t<[0,3], 35229696>, length=4096, state=DIRTY, last_committed_crc=4012888701, refcount=4, size=84, meta=btree_node_meta_t(begin=18375214245275111772, end=18375218651971416064, depth=1))
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - LBATree::get_internal_node(0x502fec0): read internal at offset paddr_t<[0,3], 1822720> CachedExtent(addr=0x5ba1010, type=LADDR_INTERNAL, version=46, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 2957312>), paddr=paddr_t<[0,3], 1822720>, length=4096, state=DIRTY, last_committed_crc=3738435765, refcount=10, size=43, meta=btree_node_meta_t(begin=0, end=18446744073709551615, depth=2))
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - LBATree::lower_bound(0x51122f0): leaf addr 18375214245277027307, got ret offset 5, size 84, end false
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - LBATree::get_leaf_node(0x50abe10): read leaf at offset paddr_t<[0,3], 26198016> CachedExtent(addr=0x5ae9ea0, type=LADDR_LEAF, version=11, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 28512256>), paddr=paddr_t<[0,3], 26198016>, length=4096, state=MUTATION_PENDING, last_committed_crc=2315914794, refcount=3, size=105, meta=btree_node_meta_t(begin=18375091696136744960, end=18375099204593074176, depth=1))
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - Cache::prepare_record(0x545b8a0): enter
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - Cache::prepare_record(0x545b8a0): read_set validated
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - Cache::prepare_record(0x545b8a0): mutating CachedExtent(addr=0x519be50, type=ONODE_BLOCK_STAGED, version=24, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 24289280>), paddr=paddr_t<[0,3], 24137728>, length=16384, state=MUTATION_PENDING, last_committed_crc=3005506018, refcount=1, laddr=18375016947424296960, pin=LBAPin(18375016947424296960~16384->paddr_t<[0,3], 24137728>, fltree_header=headerL0(is_level_tail=0, level=0))
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - Cache::commit_replace_extent(0x545b8a0): prev CachedExtent(addr=0x4f472a0, type=ONODE_BLOCK_STAGED, version=23, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 24289280>), paddr=paddr_t<[0,3], 24137728>, length=16384, state=DIRTY, last_committed_crc=3005506018, refcount=3, laddr=18375016947424296960, pin=LBAPin(18375016947424296960~16384->paddr_t<[0,3], 24137728>, fltree_header=headerL0(is_level_tail=0, level=0)), next CachedExtent(addr=0x519be50, type=ONODE_BLOCK_STAGED, version=24, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 24289280>), paddr=paddr_t<[0,3], 24137728>, length=16384, state=MUTATION_PENDING, last_committed_crc=3005506018, refcount=2, laddr=18375016947424296960, pin=LBAPin(18375016947424296960~16384->paddr_t<[0,3], 24137728>, fltree_header=headerL0(is_level_tail=0, level=0))
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - Cache::invalidate(0x545b8a0): conflict begin -- extent CachedExtent(addr=0x4f472a0, type=ONODE_BLOCK_STAGED, version=23, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 24289280>), paddr=paddr_t<[0,3], 24137728>, length=16384, state=DIRTY, last_committed_crc=3005506018, refcount=2, laddr=18375016947424296960, pin=LBAPin(18375016947424296960~16384->paddr_t<[0,3], 24137728>, fltree_header=headerL0(is_level_tail=0, level=0))
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - Cache::invalidate(0x545b8a0): conflict end
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - Cache::prepare_record(0x545b8a0): mutating CachedExtent(addr=0x5a79010, type=LADDR_LEAF, version=9, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 28459008>), paddr=paddr_t<[0,3], 26783744>, length=4096, state=MUTATION_PENDING, last_committed_crc=1096889331, refcount=2, size=94, meta=btree_node_meta_t(begin=18375003139041846347, end=18375009005362352128, depth=1))
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - Cache::commit_replace_extent(0x545b8a0): prev CachedExtent(addr=0x5879040, type=LADDR_LEAF, version=8, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 28459008>), paddr=paddr_t<[0,3], 26783744>, length=4096, state=DIRTY, last_committed_crc=1096889331, refcount=5, size=91, meta=btree_node_meta_t(begin=18375003139041846347, end=18375009005362352128, depth=1)), next CachedExtent(addr=0x5a79010, type=LADDR_LEAF, version=9, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 28459008>), paddr=paddr_t<[0,3], 26783744>, length=4096, state=MUTATION_PENDING, last_committed_crc=1096889331, refcount=3, size=94, meta=btree_node_meta_t(begin=18375003139041846347, end=18375009005362352128, depth=1))
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - Cache::invalidate(0x545b8a0): conflict begin -- extent CachedExtent(addr=0x5879040, type=LADDR_LEAF, version=8, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 28459008>), paddr=paddr_t<[0,3], 26783744>, length=4096, state=DIRTY, last_committed_crc=1096889331, refcount=4, size=91, meta=btree_node_meta_t(begin=18375003139041846347, end=18375009005362352128, depth=1))
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - Cache::mark_transaction_conflicted(0x52f66a0): set conflict
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - Cache::invalidate(0x545b8a0): conflict end
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - Cache::prepare_record(0x545b8a0): mutating CachedExtent(addr=0x50a4560, type=ONODE_BLOCK_STAGED, version=255, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 30257152>), paddr=paddr_t<[0,3], 30228480>, length=16384, state=MUTATION_PENDING, last_committed_crc=70112092, refcount=1, laddr=18375005852766371840, pin=LBAPin(18375005852766371840~16384->paddr_t<[0,3], 30228480>, fltree_header=headerL0(is_level_tail=0, level=0))
DEBUG 2021-12-16 11:53:45,164 [shard 0] seastore - Cache::commit_replace_extent(0x545b8a0): prev CachedExtent(addr=0x4fe81c0, type=ONODE_BLOCK_STAGED, version=254, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 30257152>), paddr=paddr_t<[0,3], 30228480>, length=16384, state=INVALID, last_committed_crc=70112092, refcount=2), next CachedExtent(addr=0x50a4560, type=ONODE_BLOCK_STAGED, version=255, dirty_from_or_retired_at=journal_seq_t(segment_seq=3, offset=paddr_t<[0,3], 30257152>), paddr=paddr_t<[0,3], 30228480>, length=16384, state=MUTATION_PENDING, last_committed_crc=70112092, refcount=2, laddr=18375005852766371840, pin=LBAPin(18375005852766371840~16384->paddr_t<[0,3], 30228480>, fltree_header=headerL0(is_level_tail=0, level=0))
ERROR 2021-12-16 11:53:45,164 [shard 0] none - ../src/crimson/os/seastore/cached_extent.h:266 : In function 'bool crimson::os::seastore::CachedExtent::is_dirty() const', ceph_assert(s)
is_valid()
Aborting on shard 0.
Backtrace:
0# gsignal in /lib64/libc.so.6
1# abort in /lib64/libc.so.6
2# ceph::__ceph_assert_fail(char const*, char const*, int, char const*) at /home/xuxuehan/nvme/ceph/build/../src/seastar/include/seastar/util/log.hh:105
3# ceph::__ceph_assertf_fail(char const*, char const*, int, char const*, char const*, ...) at /home/xuxuehan/nvme/ceph/build/../src/crimson/common/assert.cc:33
4# crimson::os::seastore::Cache::commit_replace_extent(crimson::os::seastore::Transactionx%x
, boost::intrusive_ptr<crimson::os::seastore::CachedExtent>, boost::intrusive_ptr<crimson::os::seastore::CachedExtent>) at /home/xuxuehan/nvme/ceph/build/../src/crimson/os/seastore/cached_extent.h:258
5# crimson::os::seastore::Cache::prepare_record(crimson::os::seastore::Transaction&) at /home/xuxuehan/nvme/ceph/build/../src/crimson/os/seastore/cache.cc:915
6# crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}::operator()() at /home/xuxuehan/nvme/ceph/build/../src/crimson/os/seastore/transaction_manager.cc:275
7# auto seastar::futurize_invoke<crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}>(crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}&&) at /home/xuxuehan/nvme/ceph/build/../src/crimson/common/interruptible_future.h:1512
8# auto crimson::interruptible::internal::call_with_interruption_impl<crimson::os::seastore::TransactionConflictCondition, crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}>(seastar::lw_shared_ptr<crimson::os::seastore::TransactionConflictCondition>, crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}&&) at /home/xuxuehan/nvme/ceph/build/../src/crimson/common/interruptible_future.h:181
9# auto crimson::interruptible::call_with_interruption<crimson::os::seastore::TransactionConflictCondition, crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}, crimson::interruptible::interruptible_future_detail<crimson::os::seastore::TransactionConflictCondition, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> > > >(seastar::lw_shared_ptr<crimson::os::seastore::TransactionConflictCondition>, crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}&&) at /home/xuxuehan/nvme/ceph/build/../src/seastar/include/seastar/core/shared_ptr.hh:300
10# auto seastar::futurize_invoke<crimson::interruptible::interruptible_future_detail<crimson::os::seastore::TransactionConflictCondition, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> > >::safe_then_interruptible<true, crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}, void, 0>(crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}&&)::{lambda()#1}>(crimson::interruptible::interruptible_future_detail<crimson::os::seastore::TransactionConflictCondition, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> > >::safe_then_interruptible<true, crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}, void, 0>(crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}&&)::{lambda()#1}&&) at /home/xuxuehan/nvme/ceph/build/../src/seastar/include/seastar/core/shared_ptr.hh:300
11# seastar::noncopyable_function<crimson::interruptible::interruptible_future_detail<crimson::os::seastore::TransactionConflictCondition, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> > > (seastar::future<void>&&)>::indirect_vtable_for<seastar::future<void>::then_wrapped_maybe_erase<false, crimson::interruptible::interruptible_future_detail<crimson::os::seastore::TransactionConflictCondition, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> > >, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> >::safe_then<crimson::interruptible::interruptible_future_detail<crimson::os::seastore::TransactionConflictCondition, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> > >::safe_then_interruptible<true, crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}, void, 0>(crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}&&)::{lambda()#1}, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::pass_further>(crimson::interruptible::interruptible_future_detail<crimson::os::seastore::TransactionConflictCondition, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> > >::safe_then_interruptible<true, crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}, void, 0>(crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}&&)::{lambda()#1}&&, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::pass_further)::{lambda(crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::pass_further)#1}>(crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> >::safe_then<crimson::interruptible::interruptible_future_detail<crimson::os::seastore::TransactionConflictCondition, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> > >::safe_then_interruptible<true, crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}, void, 0>(crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}&&)::{lambda()#1}, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::pass_further>(crimson::interruptible::interruptible_future_detail<crimson::os::seastore::TransactionConflictCondition, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> > >::safe_then_interruptible<true, crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}, void, 0>(crimson::os::seastore::TransactionManager::submit_transaction_direct(crimson::os::seastore::Transaction&)::{lambda()#3}&&)::{lambda()#1}&&, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::pass_further)::{lambda(crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::pass_further)#1}&&)::{lambda(seastar::future<void>&&)#1}>::call(seastar::noncopyable_function<crimson::interruptible::interruptible_future_detail<crimson::os::seastore::TransactionConflictCondition, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> > > (seastar::future<void>&&)> const*, seastar::future<void>&&) at /home/xuxuehan/nvme/ceph/build/../src/seastar/include/seastar/util/noncopyable_function.hh:154
12# seastar::continuation<seastar::internal::promise_base_with_type<void>, seastar::noncopyable_function<crimson::interruptible::interruptible_future_detail<crimson::os::seastore::TransactionConflictCondition, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> > > (seastar::future<void>&&)>, seastar::future<void>::then_wrapped_nrvo<crimson::interruptible::interruptible_future_detail<crimson::os::seastore::TransactionConflictCondition, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> > >, seastar::noncopyable_function<crimson::interruptible::interruptible_future_detail<crimson::os::seastore::TransactionConflictCondition, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> > > (seastar::future<void>&&)> >(seastar::noncopyable_function<crimson::interruptible::interruptible_future_detail<crimson::os::seastore::TransactionConflictCondition, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> > > (seastar::future<void>&&)>&&)::{lambda(seastar::internal::promise_base_with_type<void>&&, seastar::noncopyable_function<crimson::interruptible::interruptible_future_detail<crimson::os::seastore::TransactionConflictCondition, crimson::errorator<crimson::unthrowable_wrapper<std::error_code const&, crimson::ec<(std::errc)5> > >::_future<crimson::errorated_future_marker<void> > > (seastar::future<void>&&)>&, seastar::future_state<seastar::internal::monostate>&&)#1}, void>::run_and_dispose() at /home/xuxuehan/nvme/ceph/build/../src/seastar/include/seastar/util/noncopyable_function.hh:209
13# seastar::reactor::run_tasks(seastar::reactor::task_queue&) at /home/xuxuehan/nvme/ceph/build/../src/seastar/src/core/reactor.cc:2355
14# seastar::reactor::run_some_tasks() at /home/xuxuehan/nvme/ceph/build/../src/seastar/src/core/reactor.cc:2764
15# seastar::reactor::do_run() at /home/xuxuehan/nvme/ceph/build/../src/seastar/src/core/reactor.cc:2932
16# seastar::reactor::run() at /home/xuxuehan/nvme/ceph/build/../src/seastar/src/core/reactor.cc:2815
17# seastar::app_template::run_deprecated(int, char**, std::function<void ()>&&) at /home/xuxuehan/nvme/ceph/build/../src/seastar/src/core/app-template.cc:265
18# seastar::app_template::run(int, char**, std::function<seastar::future<int> ()>&&) at /home/xuxuehan/nvme/ceph/build/../src/seastar/src/core/app-template.cc:156
19# main at /home/xuxuehan/nvme/ceph/build/../src/crimson/osd/main.cc:239
20# __libc_start_main in /lib64/libc.so.6

Actions #1

Updated by Xuehan Xu over 2 years ago

  • Pull request ID set to 44345
Actions #2

Updated by Xuehan Xu almost 2 years ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF